🗃 Modified: .gitignore index.js now.json package-lock.json routes/authRoute.js routes/crudRoute.js  🗃

--- a/now.json
+++ b/now.json
@@ -12,9 +12,7 @@
       "dest": "/index.js"
     }
   ],
-    "env": {
-    "NODE_ENV": "production",
-    "JWT_SECRET": "bhevbjerbjrngjntgjtb",
-    "MONGO_URI": "CHANGE_THIS"
+  "env": {
+    "NODE_ENV": "production"
   }
 }
